# docs/swagger.json
@@ -86,6 +86,41 @@
                 }
             }
         },
+        "/educations": {
+            "get": {
+                "description": "get all educations data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all educations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/politicos.Education"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/political-offices": {
             "get": {
                 "description": "get all political offices data",
@@ -173,6 +208,9 @@
                     "type": "string"
                 },
                 "slug": {
+                    "type": "string"
+                },
+                "tseId": {
                     "type": "string"
                 }
             }
@@ -371,6 +409,20 @@
                 }
             }
         },
+        "politicos.Education": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "tseId": {
+                    "type": "string"
+                }
+            }
+        },
         "politicos.PoliticalOffice": {
             "type": "object",
             "properties": {
@@ -385,6 +437,9 @@
                 },
                 "term": {
                     "type": "integer"
+                },
+                "tseId": {
+                    "type": "string"
                 },
                 "wikipedia": {
                     "type": "string"
@@ -407,7 +462,7 @@
                     "type": "string"
                 },
                 "tseNumber": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "website": {
                     "type": "string"
